# jpcm

./: CMakeLists.txt  README.md  package.xml
GTSAMIntegration/: JPCM.cpp  JPCM.h  Marginalization.h  factors.cpp  factors.h  gtsam_wrapper.h
app/: FakeGPS_IMU_fusion_node.cpp  JPCM_node.cpp  gps_imu_node.cpp  odom_node.cpp  px4ctrl_node.cpp
bash/: start_px4ctrl.sh  test_fusion.bash  test_fusion.sh
config/: ctrl_param_fpv.yaml  ctrl_param_fpv_MPC_nn.yaml  ctrl_param_fpv_MPC_vicon.yaml  ctrl_param_fpv_MPC_with_fakeGPS_IMU_fusion.yaml  ctrl_param_fpv_MPC_with_vicon_IMU_fusion.yaml  extrinsic.yaml  fusion.yaml
config/bak/: ctrl_param_fpv_MPC_8cm_positioning.yaml  ctrl_param_fpv_MPC_precise_positioning.yaml  ctrl_param_fpv_SP_JPCM_14cm.yaml  ctrl_param_fpv_SP_JPCM_8cm.yaml
include/: JPCM.h  PX4CtrlFSM.h  PX4CtrlParam.h  basic_func.h  controller.h  factors.h  gps_imu.h  input.h  jpcm.h  type.h
launch/: run_ctrl.launch  run_ctrl_mpc_vicon.launch  run_fusion.launch  run_test_fusion.launch  run_test_jpcm.launch  thrust_calibrate.launch  vicon.launch
src/: JPCM.cpp  Marginalization.cpp  PX4CtrlFSM.cpp  PX4CtrlFSM.h  PX4CtrlParam.cpp  PX4CtrlParam.h  TrustMoments.h  controller.cpp  controller.h  factors.cpp  gps_imu.cpp  input.cpp  input.h  jpcm.cpp  odo_node.cpp  odom_node.cpp  px4ctrl_node.cpp
test/: test_fusion.cpp  test_jpcm.cpp
thrust_calibrate_scrips/: thrust_calibrate.py
